--- a/hierarchy/test - 副本 - 副本.ipynb
+++ b/hierarchy/test - 副本 - 副本.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "id": "f7f39044",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "id": "0f6f6b31",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 3,
    "id": "7f8f1fe2",
    "metadata": {},
    "outputs": [],
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 4,
    "id": "c4d9f60f",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 5,
    "id": "e13ace2a",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 6,
    "id": "d0e18f77",
    "metadata": {},
    "outputs": [],
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 8,
    "id": "9a726136",
    "metadata": {},
    "outputs": [],
@@ -1701,7 +1701,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 17,
+   "id": "be439a32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'data': {'source': '0', 'target': '1'}}\n",
+      "{'data': {'source': '0', 'target': '2'}}\n",
+      "{'data': {'source': '0', 'target': '3'}}\n",
+      "{'data': {'source': '1', 'target': '2'}}\n",
+      "{'data': {'source': '1', 'target': '3'}}\n",
+      "{'data': {'source': '2', 'target': '3'}}\n",
+      "{'data': {'source': '4', 'target': '5'}}\n",
+      "{'data': {'source': '4', 'target': '6'}}\n",
+      "{'data': {'source': '5', 'target': '6'}}\n",
+      "{'data': {'source': '3', 'target': '4'}}\n",
+      "{'data': {'source': '0', 'target': 'prior'}}\n",
+      "{'data': {'source': '1', 'target': 'prior'}}\n",
+      "{'data': {'source': '2', 'target': 'prior'}}\n",
+      "{'data': {'source': '3', 'target': 'prior'}}\n",
+      "{'data': {'source': '4', 'target': 'prior'}}\n",
+      "{'data': {'source': '5', 'target': 'prior'}}\n",
+      "{'data': {'source': '6', 'target': 'prior'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for edge in base_edges:\n",
+    "    print(edge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "95c7cdb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'data': {'id': '0', 'layer': 1, 'dim': 8}, 'position': {'x': 0.0, 'y': 15.0}}, {'data': {'id': '1', 'layer': 1, 'dim': 6}, 'position': {'x': 50.0, 'y': 10.0}}]\n",
+      "[{'data': {'source': '0', 'target': 'prior'}}, {'data': {'source': '1', 'target': 'prior'}}, {'data': {'source': '0', 'target': '1'}}]\n",
+      "{'0': '0', '1': '0', '2': '0', '3': '0', '4': '1', '5': '1', '6': '1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(super_nodes)\n",
+    "print(super_edges)\n",
+    "print(node_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "3e1ea9f9",
    "metadata": {},
    "outputs": [
@@ -1711,7 +1768,7 @@
        "2"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1722,80 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
-   "id": "88b56ca2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def vcycle_loop(layers, update_svd=False):\n",
-    "    if update_svd:    \n",
-    "        for i in len(layers):\n",
-    "            if layers[i][\"name\"].startswith(\"super\"):\n",
-    "                layers[i][\"graph\"] = build_super_graph(layers[:i+1])\n",
-    "            if layers[i][\"name\"].startswith(\"abs\"):\n",
-    "                layers[i][\"graph\"], layers[i][\"Bs\"], layers[i][\"ks\"] = build_abs_graph(layers[:i+1], 2)\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "def vcycle_loop(self, vis):\n",
-    "    i=0\n",
-    "    # self.get_means()\n",
-    "\n",
-    "    while  not vis.reset_event.isSet():\n",
-    "        while vis.pause_event.isSet() and not vis.reset_event.isSet():\n",
-    "            time.sleep(0.5)\n",
-    "\n",
-    "        self.visualisation_sync(vis)\n",
-    "\n",
-    "        # if i == 10:  # Number of damped iterations before applying undamping\n",
-    "        #     self.eta_damping = 0.0\n",
-    "\n",
-    "        for _ in range(1):\n",
-    "            self.synchronous_iteration(level=0)\n",
-    "            time.sleep(1e-9)\n",
-    "        # self.update_all_residuals(level=0)\n",
-    "        # self.restrict_all_residuals(level=0)\n",
-    "        \n",
-    "        for level in range(1,len(self.multigrid_vars)):  #range(1, 5):\n",
-    "            self.update_all_residual_etas(level=level)\n",
-    "            self.update_all_beliefs(level=level) \n",
-    "            for _ in range(1):\n",
-    "                self.synchronous_iteration(level=level)\n",
-    "                time.sleep(1e-9)\n",
-    "            self.update_all_residuals(level=level)\n",
-    "            #self.restrict_all_residuals(level=level)                \n",
-    "            \n",
-    "        for level in range(len(self.multigrid_vars)-1,0,-1):  #range(4,0,-1):\n",
-    "            for _ in range(1):\n",
-    "                self.synchronous_iteration(level=level)\n",
-    "                time.sleep(1e-9)\n",
-    "            self.prolongate_corrections(level=level)\n",
-    "\n",
-    "        i+=1\n",
-    "        av_dist = np.mean(np.linalg.norm(np.array([var.mu - var.GT for var in self.var_nodes if var.type != \"multigrid\"]),axis=1))\n",
-    "        self.energy_history.append(self.energy())\n",
-    "        self.error_history.append(av_dist)\n",
-    "        self.nmsgs_history.append(self.n_msgs)\n",
-    "        print(f'Iteration {i}  // Energy {self.energy_history[-1]:.6f} // ' \n",
-    "                f'Average error {av_dist:.4f} // msgs sent {self.n_msgs/1e6:.3f}x10^6')\n",
-    "        \n",
-    "        self.get_multigrid_stats()\n",
-    "        for level in range(len(self.n_active)):\n",
-    "            if self.n_active[level] > 0:\n",
-    "                print(f'Multigrid stats // level {level} // {(self.n_coarse[level]/(len(self.multigrid_vars[level])))*100:.2f}% coarse ' \\\n",
-    "                    f'// {(self.n_active[level]/(len(self.multigrid_vars[level])))*100:.2f}% active ' \\\n",
-    "                    f'// {len(self.multigrid_vars[level])} total ')\n",
-    "        \n",
-    "        print('')\n",
-    "        if vis.skip_event.isSet():\n",
-    "            vis.pause_event.set()\n",
-    "            vis.skip_event.clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 10,
    "id": "3a5e78c4",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 11,
    "id": "bbf7f4c0",
    "metadata": {},
    "outputs": [
@@ -2055,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a8bccbca",
    "metadata": {},
    "outputs": [
@@ -2066,11 +2050,6 @@
       "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
       " -5.19983453 27.30061548]\n",
       "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
-      " -5.19983453 27.30061548]\n",
-      "[-0.38119693 -0.01443515]\n",
-      "[[1.17560741e-02 1.25857487e-18]\n",
-      " [1.25857487e-18 1.17560741e-02]]\n",
-      "[-1.34553367  3.38894029 -2.90695587 12.40028538  6.31483732 23.53412873\n",
       " -5.19983453 27.30061548]\n"
      ]
     }
@@ -2078,11 +2057,11 @@
    "source": [
     "absgraph = layers[-1][\"graph\"]\n",
     "\n",
-    "print(Bs[0] @ absgraph.var_nodes[0].mu + ks[0])\n",
+    "#print(Bs[0] @ absgraph.var_nodes[0].mu + ks[0])\n",
     "print(layers[-2][\"graph\"].var_nodes[0].mu)\n",
     "\n",
-    "print(absgraph.var_nodes[0].belief.eta)\n",
-    "print(absgraph.var_nodes[0].belief.lam)\n",
+    "#print(absgraph.var_nodes[0].belief.eta)\n",
+    "#print(absgraph.var_nodes[0].belief.lam)\n",
     "\n",
     "#absgraph.update_all_beliefs(absgraph.var_nodes)\n",
     "for i in range(100):\n",
@@ -2095,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 54,
    "id": "65b2ea11",
    "metadata": {},
    "outputs": [
@@ -2103,80 +2082,169 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.38119693 -0.01443515]\n",
-      "[[1.17560741e-02 1.25857487e-18]\n",
-      " [1.25857487e-18 1.17560741e-02]]\n"
+      "[ 1.15158182 -0.12118028  0.220961    0.08883329  0.30506051  0.44922781]\n",
+      "[[ 0.03714286  0.         -0.01        0.         -0.01        0.        ]\n",
+      " [ 0.          0.03714286  0.         -0.01        0.         -0.01      ]\n",
+      " [-0.01        0.          0.03        0.         -0.01        0.        ]\n",
+      " [ 0.         -0.01        0.          0.03        0.         -0.01      ]\n",
+      " [-0.01        0.         -0.01        0.          0.03        0.        ]\n",
+      " [ 0.         -0.01        0.         -0.01        0.          0.03      ]]\n"
      ]
     }
    ],
    "source": [
-    "print(absgraph.var_nodes[0].belief.eta)\n",
-    "print(absgraph.var_nodes[0].belief.lam)"
+    "print(supergraph.var_nodes[1].belief.eta)\n",
+    "print(supergraph.var_nodes[1].belief.lam)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 58,
+   "id": "67cb6111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02997088, 0.        ],\n",
+       "       [0.        , 0.02997088]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basegraph.factors[6].adj_beliefs[0].lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "38ca646c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02997088, 0.        ],\n",
+       "       [0.        , 0.02997088]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "basegraph.factors[7].adj_beliefs[0].lam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "ba73f892",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.3720896 , -0.01409028])"
+       "array([52.1165681 ,  5.44711511])"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Bs[0].T@supergraph.factors[0].messages[0].eta + Bs[0].T@supergraph.factors[2].messages[0].eta"
+    "np.linalg.solve(basegraph.factors[6].adj_beliefs[0].lam, basegraph.factors[6].adj_beliefs[0].eta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 46,
    "id": "891cc038",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 2)"
+       "array([52.1165681 ,  5.44711511, 38.15757778, 11.67015352, 40.26006536,\n",
+       "       20.68001639])"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Bs[0].shape"
+    "np.linalg.solve(supergraph.var_nodes[1].belief.lam, supergraph.var_nodes[1].belief.eta)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 49,
    "id": "84c6508c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.14752049e-02, 1.03492005e-18],\n",
-       "       [1.03492005e-18, 1.14752049e-02]])"
+       "array([[36.84210504,  0.        , 18.42105243,  0.        , 18.42105243,\n",
+       "         0.        ],\n",
+       "       [ 0.        , 36.84210504,  0.        , 18.42105243,  0.        ,\n",
+       "        18.42105243],\n",
+       "       [18.42105243,  0.        , 46.71052601,  0.        , 21.71052607,\n",
+       "         0.        ],\n",
+       "       [ 0.        , 18.42105243,  0.        , 46.71052601,  0.        ,\n",
+       "        21.71052607],\n",
+       "       [18.42105243,  0.        , 21.71052607,  0.        , 46.71052601,\n",
+       "         0.        ],\n",
+       "       [ 0.        , 18.42105243,  0.        , 21.71052607,  0.        ,\n",
+       "        46.71052601]])"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Bs[0].T@supergraph.factors[0].messages[0].lam@Bs[0] + Bs[0].T@supergraph.factors[2].messages[0].lam@Bs[0]"
+    "np.linalg.inv(supergraph.var_nodes[1].belief.lam)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "c563c190",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[33.36571711,  0.        ],\n",
+       "       [ 0.        , 33.36571711]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.inv(basegraph.factors[6].adj_beliefs[0].lam)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c52d54c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
