--- a/hierarchy/test - 副本 - 副本.ipynb
+++ b/hierarchy/test - 副本 - 副本.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 514,
    "id": "f7f39044",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,10 @@
     "        1: (0, 10),\n",
     "        2: (0, 20),\n",
     "        3: (0, 30),\n",
-    "        4: (1000, 0),\n",
-    "        5: (1000, 10),\n",
-    "        6: (1000, 20),\n",
-    "        7: (1000, 30),\n",
+    "        4: (100, 0),\n",
+    "        5: (100, 10),\n",
+    "        6: (100, 20),\n",
+    "        7: (100, 30),\n",
     "    }\n",
     "\n",
     "    # 添加节点\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 515,
    "id": "0f6f6b31",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 516,
    "id": "7f8f1fe2",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 517,
    "id": "c4d9f60f",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 518,
    "id": "e13ace2a",
    "metadata": {},
    "outputs": [],
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 519,
    "id": "d0e18f77",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "a414d76f",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 521,
    "id": "9a726136",
    "metadata": {},
    "outputs": [],
@@ -1689,8 +1689,9 @@
     "super_layer_idx = 1\n",
     "\n",
     "\n",
-    "super_nodes, super_edges, node_map = fuse_to_super_grid(last[\"nodes\"], last[\"edges\"], 2, 1, super_layer_idx)\n",
+    "\n",
     "super_nodes, super_edges, node_map = fuse_to_super_kmeans(last[\"nodes\"], last[\"edges\"], 2, super_layer_idx)\n",
+    "super_nodes, super_edges, node_map = fuse_to_super_grid(last[\"nodes\"], last[\"edges\"], 2, 1, super_layer_idx)\n",
     "layers.append({\"name\":f\"super{1}\", \"nodes\":super_nodes, \"edges\":super_edges, \"node_map\":node_map})\n",
     "layers[-1][\"graph\"] = build_super_graph(layers)\n",
     "\n",
@@ -1700,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 522,
    "id": "be439a32",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 523,
    "id": "95c7cdb2",
    "metadata": {},
    "outputs": [
@@ -1747,9 +1748,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'id': '0', 'layer': 1, 'dim': 12}, 'position': {'x': 50.0, 'y': 10.0}}, {'data': {'id': '1', 'layer': 1, 'dim': 4}, 'position': {'x': 50.0, 'y': 30.0}}]\n",
-      "[{'data': {'source': '0', 'target': 'prior'}}, {'data': {'source': '0', 'target': '1'}}, {'data': {'source': '1', 'target': 'prior'}}]\n",
-      "{'0': '0', '1': '0', '2': '0', '4': '0', '5': '0', '6': '0', '3': '1', '7': '1'}\n"
+      "[{'data': {'id': '0', 'layer': 1, 'dim': 8}, 'position': {'x': 0.0, 'y': 15.0}}, {'data': {'id': '1', 'layer': 1, 'dim': 8}, 'position': {'x': 100.0, 'y': 15.0}}]\n",
+      "[{'data': {'source': '0', 'target': 'prior'}}, {'data': {'source': '1', 'target': 'prior'}}, {'data': {'source': '0', 'target': '1'}}]\n",
+      "{'0': '0', '1': '0', '2': '0', '3': '0', '4': '1', '5': '1', '6': '1', '7': '1'}\n"
      ]
     }
    ],
@@ -1761,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 524,
    "id": "3e1ea9f9",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1772,7 @@
        "2"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 524,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 525,
    "id": "3a5e78c4",
    "metadata": {},
    "outputs": [
@@ -1906,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 526,
    "id": "bbf7f4c0",
    "metadata": {},
    "outputs": [
@@ -2042,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 527,
    "id": "a8bccbca",
    "metadata": {},
    "outputs": [
@@ -2050,21 +2051,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[79.99999924 79.99999924 62.1108315  62.1108315  19.99999996 19.99999996\n",
-      " 19.99999996 19.99999996 19.99999996 19.99999996 17.88916803 17.88916803]\n",
-      "[ -5.95694171  -2.1236632   -5.87349705  11.20142968  -0.89281828\n",
-      "  21.99152717 105.36887904   7.45511402  90.91640916   9.82317475\n",
-      "  98.67009913  28.24227317]\n",
-      "[ -5.95694171  -2.1236632   -5.87349705  11.20142968  -0.89281828\n",
-      "  21.99152717 105.36887904   7.45511402  90.91640916   9.82317475\n",
-      "  98.67009913  28.24227317]\n"
+      "[-5.95694171 -2.1236632  -5.87349705 11.20142968 -0.89281828 21.99152717\n",
+      " -7.32162411 30.87354717]\n",
+      "[-6.8802818  -3.54851395 -6.79683714  9.77657893 -1.81615837 20.56667642\n",
+      " -8.10025331 29.67200681]\n"
      ]
     }
    ],
    "source": [
     "abs_nodes, abs_edges   = copy_to_abs(super_nodes, super_edges, super_layer_idx + 1)\n",
     "layers.append({\"name\":f\"abs{1}\", \"nodes\":abs_nodes, \"edges\":abs_edges})\n",
-    "layers[-1][\"graph\"], Bs, ks = build_abs_graph(layers, 2)\n",
+    "layers[-1][\"graph\"], Bs, ks, k2s = build_abs_graph(layers, 2)\n",
     "\n",
     "absgraph = layers[-1][\"graph\"]\n",
     "\n",
@@ -2074,6 +2071,7 @@
     "#print(absgraph.var_nodes[0].belief.eta)\n",
     "#print(absgraph.var_nodes[0].belief.lam)\n",
     "\n",
+    "    \n",
     "#absgraph.update_all_beliefs(absgraph.var_nodes)\n",
     "for i in range(100):\n",
     "    absgraph.compute_all_messages(absgraph.factors, local_relin=True)\n",
@@ -2085,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "65b2ea11",
    "metadata": {},
    "outputs": [
@@ -2093,11 +2091,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.59415391  0.85098469  2.51171197  0.98965534]\n",
-      "[[ 0.03269231  0.         -0.00384615  0.        ]\n",
-      " [ 0.          0.03269231  0.         -0.00384615]\n",
-      " [-0.00384615  0.          0.02692308  0.        ]\n",
-      " [ 0.         -0.00384615  0.          0.02692308]]\n"
+      "[旧 B,k 回放]  mean 误差 (L2) 最大值 = 3.270816706964318\n",
+      "[新 R,c 回放]  mean 更新量 (L2) 最大值 = 16.692732901797925\n",
+      "[abs 层]  每变量 ||Λa μa - ηa|| 最大值 = 2.4552312978479334e-16\n"
      ]
     }
    ],
@@ -2108,98 +2104,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "67cb6111",
+   "execution_count": 437,
+   "id": "d8aaa6cc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0.03881347, 0.        ],\n",
-       "       [0.        , 0.03881347]])"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===（带 Schur 的正确口径）每变量差异与驻点残差 ===\n",
+      "var 1: ||ΔΛ||=0.000e+00  ||Δη||=2.220e-16  ||grad_super||=3.284e-02  ||grad_abs||=3.284e-02\n",
+      "var 0: ||ΔΛ||=0.000e+00  ||Δη||=0.000e+00  ||grad_super||=3.284e-02  ||grad_abs||=3.284e-02\n"
+     ]
     }
    ],
    "source": [
-    "basegraph.factors[6].adj_beliefs[0].lam"
+    "# 若你没有保存 Ns_local，就不传它，函数会按 Σ 补齐\n",
+    "rows = check_equivalence_with_schur(layers[-2][\"graph\"], absgraph, Bs, tol=1e-8)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 346,
+   "id": "67cb6111",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== 检查 abs 因子载荷（measurement_lambda / measurement → η=Λz）===\n",
+      "\n",
+      "[factor     0 unary] ||res||=2.929e-09\n",
+      "[factor     1 unary] ||res||=1.998e-08\n",
+      "[factor     2 binary] ||res||=7.976e-16\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_abs_factor_payload(absgraph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
    "id": "38ca646c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[37.77777754,  0.        , 17.77777758,  0.        , 17.77777758,\n",
-       "         0.        ,  4.44444437,  0.        ,  2.22222218,  0.        ,\n",
-       "         2.22222218,  0.        ],\n",
-       "       [ 0.        , 37.77777754,  0.        , 17.77777758,  0.        ,\n",
-       "        17.77777758,  0.        ,  4.44444437,  0.        ,  2.22222218,\n",
-       "         0.        ,  2.22222218],\n",
-       "       [17.77777758,  0.        , 37.77777754,  0.        , 17.77777758,\n",
-       "         0.        ,  4.44444437,  0.        ,  2.22222218,  0.        ,\n",
-       "         2.22222218,  0.        ],\n",
-       "       [ 0.        , 17.77777758,  0.        , 37.77777754,  0.        ,\n",
-       "        17.77777758,  0.        ,  4.44444437,  0.        ,  2.22222218,\n",
-       "         0.        ,  2.22222218],\n",
-       "       [17.77777758,  0.        , 17.77777758,  0.        , 37.77777754,\n",
-       "         0.        ,  4.44444437,  0.        ,  2.22222218,  0.        ,\n",
-       "         2.22222218,  0.        ],\n",
-       "       [ 0.        , 17.77777758,  0.        , 17.77777758,  0.        ,\n",
-       "        37.77777754,  0.        ,  4.44444437,  0.        ,  2.22222218,\n",
-       "         0.        ,  2.22222218],\n",
-       "       [ 4.44444437,  0.        ,  4.44444437,  0.        ,  4.44444437,\n",
-       "         0.        , 31.11111093,  0.        , 15.55555539,  0.        ,\n",
-       "        15.55555539,  0.        ],\n",
-       "       [ 0.        ,  4.44444437,  0.        ,  4.44444437,  0.        ,\n",
-       "         4.44444437,  0.        , 31.11111093,  0.        , 15.55555539,\n",
-       "         0.        , 15.55555539],\n",
-       "       [ 2.22222218,  0.        ,  2.22222218,  0.        ,  2.22222218,\n",
-       "         0.        , 15.55555539,  0.        , 37.77777754,  0.        ,\n",
-       "        17.77777758,  0.        ],\n",
-       "       [ 0.        ,  2.22222218,  0.        ,  2.22222218,  0.        ,\n",
-       "         2.22222218,  0.        , 15.55555539,  0.        , 37.77777754,\n",
-       "         0.        , 17.77777758],\n",
-       "       [ 2.22222218,  0.        ,  2.22222218,  0.        ,  2.22222218,\n",
-       "         0.        , 15.55555539,  0.        , 17.77777758,  0.        ,\n",
-       "        37.77777754,  0.        ],\n",
-       "       [ 0.        ,  2.22222218,  0.        ,  2.22222218,  0.        ,\n",
-       "         2.22222218,  0.        , 15.55555539,  0.        , 17.77777758,\n",
-       "         0.        , 37.77777754]])"
+       "array([[8.64509366e+01, 4.32084639e-15],\n",
+       "       [4.32084639e-15, 8.64509366e+01]])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.linalg.inv(supergraph.var_nodes[0].belief.lam)"
+    "np.linalg.inv(Bs[0].T@supergraph.var_nodes[0].belief.lam@Bs[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 348,
    "id": "9b2eb329",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (8,8) (12,12) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[107]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m np.linalg.inv(Bs[\u001b[32m0\u001b[39m]\u001b[38;5;129m@absgraph\u001b[39m.var_nodes[\u001b[32m0\u001b[39m].belief.lam\u001b[38;5;129m@Bs\u001b[39m[\u001b[32m0\u001b[39m].T + (\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43meye\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m8\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[43mBs\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;129;43m@Bs\u001b[39;49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mT\u001b[49m)\u001b[38;5;129m@supergraph\u001b[39m.var_nodes[\u001b[32m0\u001b[39m].belief.lam@(np.eye(\u001b[32m8\u001b[39m)- Bs[\u001b[32m0\u001b[39m]\u001b[38;5;129m@Bs\u001b[39m[\u001b[32m0\u001b[39m].T))\n",
-      "\u001b[31mValueError\u001b[39m: operands could not be broadcast together with shapes (8,8) (12,12) "
-     ]
+     "data": {
+      "text/plain": [
+       "array([[4.13217122e+01, 1.14042623e-14, 2.13217122e+01, 1.00511082e-14,\n",
+       "        2.13217122e+01, 1.00511082e-14, 1.85440653e+01, 8.45423353e-15],\n",
+       "       [1.14042623e-14, 4.13217122e+01, 6.75728612e-15, 2.13217122e+01,\n",
+       "        6.75728612e-15, 2.13217122e+01, 1.00000143e-14, 1.85440653e+01],\n",
+       "       [2.13217122e+01, 6.75728612e-15, 4.13217122e+01, 5.40413210e-15,\n",
+       "        2.13217122e+01, 5.40413210e-15, 1.85440653e+01, 4.53555686e-15],\n",
+       "       [1.00511082e-14, 2.13217122e+01, 5.40413210e-15, 4.13217122e+01,\n",
+       "        5.40413210e-15, 2.13217122e+01, 8.85893394e-15, 1.85440653e+01],\n",
+       "       [2.13217122e+01, 6.75728612e-15, 2.13217122e+01, 5.40413210e-15,\n",
+       "        4.13217122e+01, 5.40413210e-15, 1.85440653e+01, 4.53555686e-15],\n",
+       "       [1.00511082e-14, 2.13217122e+01, 5.40413210e-15, 2.13217122e+01,\n",
+       "        5.40413210e-15, 4.13217122e+01, 8.85893394e-15, 1.85440653e+01],\n",
+       "       [1.85440653e+01, 1.00000143e-14, 1.85440653e+01, 8.85893394e-15,\n",
+       "        1.85440653e+01, 8.85893394e-15, 3.36312452e+01, 7.45229016e-15],\n",
+       "       [8.45423353e-15, 1.85440653e+01, 4.53555686e-15, 1.85440653e+01,\n",
+       "        4.53555686e-15, 1.85440653e+01, 7.45229016e-15, 3.36312452e+01]])"
+      ]
+     },
+     "execution_count": 348,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2208,61 +2206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "7df71f9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 4)"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(Bs[1]@Bs[1].T).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5754d1fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.30001906e-03, 7.41083609e-19],\n",
-       "       [7.41083609e-19, 1.30001906e-03]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Bs[0].T@supergraph.factors[2].messages[0].lam@Bs[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "id": "791e087e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.01751859e-02, 2.93836443e-19],\n",
-       "       [2.93836443e-19, 1.01751859e-02]])"
+       "array([[ 1.01985621e-02, -6.64472386e-19],\n",
+       "       [-6.64472386e-19,  1.01985621e-02]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
